--- a/MP1/Makefile
+++ b/MP1/Makefile
@@ -18,4 +18,4 @@ app: userapp.c userapp.h
 	$(GCC) -o userapp userapp.c
 
 clean:
-	$(RM) -f userapp *~ *.ko *.o *.mod.c Module.symvers modules.order
+	$(RM) -f userapp *~ *.ko *.o *.mod.c Module.symvers modules.order .mp1.*
