--- a/MP3/Makefile
+++ b/MP3/Makefile
@@ -20,7 +20,7 @@ install: mp3.ko
 uninstall:
 	sudo rmmod mp3
 node:
-	sudo mknod node c $(shell cat /proc/devices | grep mp3_chrdev | awk '{print $$1}') 0
+	sudo -u $(shell whoami) mknod node c $(shell cat /proc/devices | grep mp3_chrdev | awk '{print $$1}') 0
 
 clean:
 	$(RM) -f userapp *~ *.ko *.o *.mod.c Module.symvers modules.order .mp3.* -r .tmp_versions
