MP3: modify Makefile

--- a/MP3/Makefile
+++ b/MP3/Makefile
@@ -5,23 +5,24 @@ KERNEL_SRC:= /lib/modules/$(shell uname -r)/build
 SUBDIR= $(PWD)
 GCC:=gcc
 RM:=rm
+FILE:=mp3
 
 .PHONY : clean
 
 all: clean modules
 
-obj-m:= mp3.o
+obj-m:= $(FILE).o
 
 modules:
 	$(MAKE) -C $(KERNEL_SRC) M=$(SUBDIR) modules
 
-install: mp3.ko
-	sudo insmod mp3.ko
+install: $(FILE).ko
+	sudo insmod $(FILE).ko
 uninstall:
-	sudo rmmod mp3
+	sudo rmmod $(FILE)
 node:
 	sudo mknod node c $(shell cat /proc/devices | grep mp3_chrdev | awk '{print $$1}') 0
 	sudo chown $(shell whoami) node 
 
 clean:
-	$(RM) -f node userapp *~ *.ko *.o *.mod.c Module.symvers modules.order .mp3.* -r .tmp_versions
+	$(RM) -f node userapp *~ *.ko *.o *.mod.c Module.symvers modules.order .$(FILE).* -r .tmp_versions
